--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <section>
+        <h2>About us</h2>
+        <p>Somos el grupo wms</p>
+        </section>
 </body>
 </html>
